--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-    "name": "multi-channel-forward-bot",
+    "name": "multiforward ",
     "description": "A simple Message Forwarder Bot to custom channels",
     "keywords": [
         "telegram",
